--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5810,7 +5810,27 @@
                 }
             } catch (error) {
                 console.error('❌ 스케줄 템플릿 로드 오류:', error);
-                defaultScheduleSteps = [];
+                // 네트워크/파싱 오류 시에도 기본 템플릿 사용하도록 함
+                defaultScheduleSteps = [
+                    { category: '기획·현장 사전 준비', name: '디자인 상담 및 설계', checkPoint: '설계 도면 확정 여부', inCharge: 'DESIGN JIG' },
+                    { category: '기획·현장 사전 준비', name: '현장 실측', checkPoint: '실측 완료 여부', inCharge: '원프로 소장 (010-4650-7013)' },
+                    { category: '기획·현장 사전 준비', name: '철거 및 폐기물 처리', checkPoint: '철거 완료 및 폐기물 반출', inCharge: '원프로 소장 (010-4650-7013)' },
+                    { category: '목공·천장·벽체', name: '목공 작업', checkPoint: '구조물 설치 완료', inCharge: '목공팀' },
+                    { category: '목공·천장·벽체', name: '천장 마감', checkPoint: '천장 마감재 시공', inCharge: '목공팀' },
+                    { category: '목공·천장·벽체', name: '벽체 마감', checkPoint: '벽체 마감재 시공', inCharge: '목공팀' },
+                    { category: '전기·조명', name: '전기 배선', checkPoint: '배선 완료 및 점검', inCharge: '전기팀' },
+                    { category: '전기·조명', name: '조명 설치', checkPoint: '조명 설치 및 점등 확인', inCharge: '전기팀' },
+                    { category: '도배·장판', name: '도배 작업', checkPoint: '도배 완료', inCharge: '도배팀' },
+                    { category: '도배·장판', name: '장판 시공', checkPoint: '장판 시공 완료', inCharge: '장판팀' },
+                    { category: '주방·욕실', name: '주방 가구 설치', checkPoint: '주방 가구 설치 완료', inCharge: '주방팀' },
+                    { category: '주방·욕실', name: '욕실 타일', checkPoint: '타일 시공 완료', inCharge: '타일팀' },
+                    { category: '주방·욕실', name: '욕실 기구 설치', checkPoint: '위생기구 설치 완료', inCharge: '설비팀' },
+                    { category: '창호·유리', name: '창호 설치', checkPoint: '창호 설치 및 밀폐 확인', inCharge: '창호팀' },
+                    { category: '창호·유리', name: '유리 시공', checkPoint: '유리 시공 완료', inCharge: '창호팀' },
+                    { category: '마감·정리', name: '최종 청소', checkPoint: '청소 완료', inCharge: '원프로 소장 (010-4650-7013)' },
+                    { category: '마감·정리', name: '하자 점검', checkPoint: '하자 확인 및 보수', inCharge: '원프로 소장 (010-4650-7013)' },
+                    { category: '마감·정리', name: '준공 및 인계', checkPoint: '고객 인수 확인', inCharge: '원프로 소장 (010-4650-7013)' }
+                ];
             }
         }
 
